# tilemap-editor

./: .clang-format  .gitignore  CMakeLists.txt  clang-format.sh  main.cpp
resources/: config.yaml
src/: callbacks.hpp  config.hpp  drawing.hpp  engine_core.hpp  ui.hpp
